hotfix: set authorization based on ACTIVE products (#425)